--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.91",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-remark-images": "^3.4.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "gatsby": "^2.28.1",
+    "gatsby-image": "^2.7.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sharp": "^2.10.1",
+    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby-remark-images": "^3.7.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^2.4.2",
-    "gatsby-transformer-remark": "^2.9.2",
+    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-transformer-remark": "^2.12.0",
+    "gatsby-transformer-sharp": "^2.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
